접근불가페이지 접속 시 메시지 팝업되도록, 홈버튼 대신 뒤로가기 버튼으로 변경